// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YouTube editor oboToSlate converts an OboNode to a Slate node 1`] = `
Object {
  "data": Object {
    "content": Object {
      "width": "large",
    },
  },
  "key": "mockKey",
  "object": "block",
  "type": "mockType",
}
`;

exports[`YouTube editor oboToSlate converts an OboNode to a Slate node with a caption 1`] = `
Object {
  "data": Object {
    "content": Object {},
  },
  "key": "mockKey",
  "object": "block",
  "type": "mockType",
}
`;

exports[`YouTube editor plugins.renderNode calls next 1`] = `undefined`;

exports[`YouTube editor plugins.renderNode renders a button when passed 1`] = `
<YouTube
  attributes={
    Object {
      "dummy": "dummyData",
    }
  }
  dummy="dummyData"
  node={
    Object {
      "data": Object {
        "get": [Function],
      },
      "type": "ObojoboDraft.Chunks.YouTube",
    }
  }
/>
`;

exports[`YouTube editor slateToObo converts a Slate node to an OboNode with content 1`] = `
Object {
  "children": Array [],
  "content": Object {},
  "id": "mockKey",
  "type": "mockType",
}
`;
